[metadata]
name = smtfuzz
version = 0.02
url = https://github.com/ZJU-Automated-Reasoning-Group/pyomt
download_url = https://github.com/ZJU-Automated-Reasoning-Group/pyomt
project_urls =
    Source Code =https://github.com/ZJU-Automated-Reasoning-Group/pyomt
author = rainoftime
license = GPLv3
license_file = LICENSE
description = An Optimization Modulo Theory (OMT) solver
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.5

